# usecase-driven-design-skills

./: .gitignore  README.md  피드백.md
.claude-plugin/: marketplace.json
uc-add-feature/: SKILL.md
uc-agent/: ARCHITECTURE.md  README.md  pyproject.toml
uc-agent/src/uc_agent/: __init__.py  __main__.py  agents.py  checkpoint.py  feedback.py  main.py  mcp_server.py  orchestrator.py  parallel.py  routing.py  tracing.py  validation.py
uc-agent/src/uc_agent/prompts/: critic.md  orchestrator_automated.md  orchestrator_interactive.md  validator.md
uc-deprecate/: SKILL.md
uc-merge/: SKILL.md
uc-new-project/: SKILL.md
uc-review/: SKILL.md
usecase-driven-design/: SKILL.md
usecase-driven-design/.claude-plugin/: plugin.json
usecase-driven-design/skills/ood-add-feature/: SKILL.md
usecase-driven-design/skills/ood-new-project/: SKILL.md
usecase-driven-design/skills/ood-review/: SKILL.md
usecase-driven-design/skills/uc-add-feature/: SKILL.md
usecase-driven-design/skills/uc-deprecate/: SKILL.md
usecase-driven-design/skills/uc-merge/: SKILL.md
usecase-driven-design/skills/uc-new-project/: SKILL.md
usecase-driven-design/skills/uc-review/: SKILL.md
usecase-driven-design/skills/usecase-driven-design/: SKILL.md
